# aif-workflow-helper

./: .bumpversion.cfg  .gitignore  .mega-linter.yaml  LICENSE  README.md  pyproject.toml  pytest.ini
.devcontainer/: devcontainer.json
.github/: BRANCH_PROTECTION.md  CODEOWNERS  PYPI_SETUP.md  TESTING_RELEASE.md  copilot-instructions.md
.github/actions/build-and-publish/: action.yml
.github/actions/build-python-package/: action.yml
.github/actions/bump-version/: action.yml
.github/actions/create-github-release/: action.yml
.github/actions/create-version/: action.yml
.github/actions/manage-version/: action.yml
.github/actions/publish-python-package/: action.yml
.github/actions/release-workflow/: action.yml
.github/actions/version-management/: action.yml
.github/prompts/: code_review.prompt.md
.github/workflows/: ci.yml  release.yml  shared-release.yml  test-release-old.yml  test-release.yml  test.yml
agents/: agents.ipynb  aif.sh  aif_vscode_sdk_transformers.ipynb
agents/docs/: dev_workflow.md
agents/raw/: sub1.agent  sub2.agent  top.agent
agents/sample/: Product-Manager.md  Python-Developer.md  Top-Agent.md
aif_workflow_helpers/: README.md  aif_helper.py  requirements.txt  run.sh  run_agents.py  setup.py
aif_workflow_helpers/aif_workflow_helpers/: __init__.py  download_agent_helpers.py  logging_utils.py  name_validation.py  upload_agent_helpers.py  upload_download_agents_helpers.py
aif_workflow_helpers/tests/: README.md  conftest.py  test_agent_client_mock.py  test_agent_helpers.py  test_agent_operations.py  test_consts.py  test_create_or_update_agent.py  test_data_processing.py  test_dependencies.py  test_download_agent.py  test_generalize_agent_dict.py  test_main.py
copilot/bash/: bash.md
docs/: dev_workflow.md
src/: __init__.py
src/aif_workflow_helper/: __init__.py
src/aif_workflow_helper/cli/: main.py
src/aif_workflow_helper/core/: agent_framework_client.py  async_agent_client.py  delete.py  download.py  types.py  upload.py
src/aif_workflow_helper/core/transformers/: base.py  filesystem.py  json_transformer.py  markdown_transformer.py  yaml_transformer.py
src/aif_workflow_helper/utils/: logging.py  validation.py
src/cli/: main.py
src/core/: download.py  upload.py
src/utils/: __init__.py  validation.py
tests/: __init__.py  conftest.py  test_agent_client_mock.py  test_agent_framework_client.py  test_agent_framework_client_retry.py  test_cli_handlers.py  test_cli_main.py  test_create_or_update_agent.py  test_delete.py  test_dependencies.py  test_download_agent.py  test_generalize_agent_dict.py  test_integration_roundtrip.py  test_json_roundtrip.py  test_markdown_roundtrip.py  test_upload_download_flow.py  test_upload_validation.py  test_yaml_roundtrip.py
