[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[project]
name = "aif_workflow_helper"
version = "0.1.0"
description = "Azure AI Foundry dev workflow helpers"
authors = [
  { name = "Pete Roden", email = "pete.roden@microsoft.com" }
]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["azure", "ai", "agents", "workflow", "automation"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

# Core runtime dependencies
dependencies = [
  "azure-ai-projects",
  "azure-ai-agents",
  "azure-identity",
  "pyyaml",
  "python-frontmatter",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "pytest-cov>=4.0.0",
  "pytest-mock>=3.10.0",
]

[project.urls]
Homepage = "https://github.com/peteroden/AIFoundry_CICD"
Source = "https://github.com/peteroden/AIFoundry_CICD"

# Console script entry points
[project.scripts]
aif-workflow-helper = "src.cli.main:main"
